--- a/style.css
+++ b/style.css
@@ -66,6 +66,12 @@ h2 {
     color: #525252;
     padding: 30px;
     margin: auto;
+    opacity: 0;
+    transition: opacity 0.9s ease-in-out;
+}
+
+#projetos.mostrar {
+    opacity: 1;
 }
 
 h3 {
