--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h2 {
     color: #525252;
     padding: 30px;
     margin: 0;
+    margin-bottom: 50px;
     opacity: 0;
     transition: opacity 0.9s ease-in-out;
 }
