--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Red Hat Display', sans-serif;
 }
 
 main {
@@ -33,7 +34,7 @@ h1 {
 h2 {
     font-size: 1.2rem;
     font-weight: 500;
-    color: #464646;
+    color: #757575;
 }
 
 #contato {
@@ -54,6 +55,17 @@ h2 {
     text-align: center;
     max-width: 350px;
     padding-top: 40px;
+}
+
+#img {
+    display: flex;
+    flex-direction: column;
+    width: 170px;
+    height: 170px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(./undraw_developer_activity_re_39tg.svg);
 }
 
 #projetos {
