--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -16,8 +17,13 @@ main {
 
 }
 #principal {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+    gap: 2.5rem;
     width: 100%;
-    max-width: 700px;
     
 }
 
@@ -54,19 +60,16 @@ h2 {
     display: flex;
     text-align: center;
     max-width: 350px;
-    padding-top: 40px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
 }
 
-#img {
+#texto-links {
     display: flex;
     flex-direction: column;
-    width: 170px;
-    height: 170px;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(./undraw_developer_activity_re_39tg.svg);
-}
+    justify-content: center;
+    align-items: center;
+  }
 
 #projetos {
     display: flex;
